# zenux-services

./: .gitignore  CMakeLists.txt  README.md  TODO  ZenuxServicesConfig.cmake.in
auto-journal-logger/app/: CMakeLists.txt  cmdhandler.cpp  cmdhandler.h  cmdparser.cpp  cmdparser.h  cmdserver.cpp  main.cpp
auto-journal-logger/lib/: CMakeLists.txt  abstractlogcreator.h  autojournallogger.cpp  autojournallogger.h  cmdhandler.cpp  cmdhandler.h  cmdparser.cpp  cmdparser.h  cmdserver.h  fileutils.cpp  fileutils.h  journallogcreator.cpp  journallogcreator.h  logcreatorjournalsimple.cpp  logcreatorjournalsimple.h  onofffilewatcher.cpp  onofffilewatcher.h  periodicloggenerator.cpp  periodicloggenerator.h  periodiclogger.cpp  periodiclogger.h  periodicloggerwrapper.cpp  periodicloggerwrapper.h
auto-journal-logger/tests/: CMakeLists.txt  test_auto_journal_logger.cpp  test_auto_journal_logger.h  test_fileutils.cpp  test_fileutils.h  test_onofffilewatcher.cpp  test_onofffilewatcher.h  test_periodic_log_generator.cpp  test_periodic_log_generator.h
com5003d/: CMakeLists.txt  adjflash.h  adjustment.cpp  adjustment.h  adjxml.h  com5003d.cpp  com5003d.h  com5003dglobal.h  com5003justdata.cpp  com5003justdata.h  com5003scpi.h  fpzchannel.cpp  fpzchannel.h  fpzinchannel.cpp  fpzinchannel.h  hkeychannel.cpp  hkeychannel.h  justdata.cpp  justdata.h  main.cpp  notificationdata.h  pcbserver.cpp  pcbserver.h  resource.h  samplerange.cpp  samplerange.h  scheadchannel.cpp  scheadchannel.h  sensechannel.cpp  sensechannel.h  senserange.cpp  senserange.h  systeminfo.cpp
com5003d/apps/: CMakeLists.txt
com5003d/configs/: CMakeLists.txt  com5003d.xml  com5003d.xsd  com5003d_config.qrc
com5003d/lib/: CMakeLists.txt  adjflash.h  adjustment.cpp  adjxml.h  com5003adjflash.h  com5003adjustment.cpp  com5003adjustment.h  com5003adjxml.h  com5003d.cpp  com5003d.h  com5003dglobal.h  com5003justdata.cpp  com5003justdata.h  com5003scpi.h  com5003sensechannel.h  com5003senserange.cpp  com5003senserange.h  sensechannel.cpp  senserange.cpp  senserange.h
com5003d/micro-controller-io/: atmel.cpp  atmel.h  atmelwatcher.cpp
com5003d/scpi-interfaces/: frqinputinterface.cpp  frqinputinterface.h  hkeyinterface.cpp  hkeyinterface.h  samplinginterface.cpp  samplinginterface.h  scheadinterface.cpp  scheadinterface.h  senseinterface.cpp  senseinterface.h  sourceinterface.cpp  sourceinterface.h  statusinterface.cpp  statusinterface.h  systeminterface.cpp  systeminterface.h
com5003d/settings/: ctrlsettings.h  debugsettings.cpp  debugsettings.h  ethsettings.cpp  ethsettings.h  fpgasettings.cpp  fpgasettings.h  frqinputsettings.cpp  frqinputsettings.h  hkeysettings.cpp  i2csettings.cpp  i2csettings.h  samplingsettings.cpp  samplingsettings.h  scheadsettings.cpp  sensesettings.cpp  sensesettings.h  sourcesettings.cpp
com5003d/systemd/: CMakeLists.txt  com5003d.service  com5003d.socket
com5003d/testlib/: CMakeLists.txt  mockforsenseinterfacecom5003.cpp  mockforsenseinterfacecom5003.h  testserverforsenseinterfacecom5003.cpp  testserverforsenseinterfacecom5003.h
com5003d/tests/: CMakeLists.txt  regression_data.qrc  test_adj_deny_import_com5003.cpp  test_adj_deny_import_com5003.h  test_adj_import_invalid_eeprom_com5003.cpp  test_adj_import_invalid_eeprom_com5003.h  test_adj_regression_calc_com5003.cpp  test_adj_regression_calc_com5003.h  test_adj_regression_import_export_eeprom_com5003.cpp  test_adj_regression_import_export_eeprom_com5003.h  test_adj_regression_import_export_xml_com5003.cpp  test_adj_regression_import_export_xml_com5003.h  test_adj_regression_import_permission_com5003.cpp  test_adj_regression_import_permission_com5003.h  test_adj_regression_scpi_query_format_com5003.cpp  test_adj_regression_scpi_query_format_com5003.h  test_com5003_config_load.cpp  test_com5003_config_load.h  test_config_load_com5003.cpp  test_config_load_com5003.h  test_regression_adj_calc_com5003.cpp  test_regression_adj_calc_com5003.h  test_regression_adj_import_export_eeprom_com5003.cpp  test_regression_adj_import_export_eeprom_com5003.h  test_regression_adj_import_export_flash_com5003.cpp  test_regression_adj_import_export_flash_com5003.h  test_regression_adj_import_export_xml_com5003.cpp  test_regression_adj_import_export_xml_com5003.h  test_regression_adj_import_permission_com5003.cpp  test_regression_adj_import_permission_com5003.h  test_regression_adj_scpi_query_format_com5003.cpp  test_regression_adj_scpi_query_format_com5003.h  test_regression_adj_status_com5003.cpp  test_regression_adj_status_com5003.h  test_regression_adjustment_com5003.cpp  test_regression_adjustment_com5003.h  (+13 more)
mt310s2d/: CMakeLists.txt  clamp.cpp  clamp.h  fpzchannel.cpp  fpzchannel.h  fpzinchannel.cpp  fpzinchannel.h  hkeychannel.cpp  hkeychannel.h  justdata.cpp  justdata.h  main.cpp  mt310s2d.cpp  mt310s2d.h  mt310s2dglobal.h  mt310s2justdata.cpp  mt310s2justdata.h  pcbserver.cpp  pcbserver.h  samplerange.cpp  samplerange.h  scheadchannel.cpp  scheadchannel.h  sensechannel.cpp  senserange.cpp  senserange.h  systeminfo.cpp  zeraglobal.h
sec1000d/: CMakeLists.txt  ecalcchannel.cpp  ecalcchannel.h  ecalcinterface.cpp  ecalcinterface.h  ecalcsettings.cpp  ethsettings.cpp  ethsettings.h  fpgasettings.cpp  fpgasettings.h  inputsettings.cpp  main.cpp  notificationdata.h  pcbserver.cpp  pcbserver.h  resource.cpp  resource.h  samplerange.cpp  sec1000d.cpp  sec1000d.h  sec1000dglobal.h  statusinterface.cpp  statusinterface.h  systeminterface.cpp  systeminterface.h
zdsp1d/: CMakeLists.txt  cmdinterpret.cpp  cmdinterpret.h  cmds.cpp  dsp.cpp  dsp.h  dsp1scpi.h  dspsettings.cpp  dspvarclientperspective.cpp  dspvarclientperspective.h  dspvarparser.cpp  dspvarparser.h  dspvarresolver.cpp  dspvarresolver.h  ethsettings.cpp  ethsettings.h  main.cpp  parse-zdsp.cpp  parse-zdsp.h  parse.cpp  parse.h  rmconnection.cpp  rmconnection.h  scpi-zdsp.cpp  scpi.cpp  scpi.h  zdsp1d.cpp  zdsp1d.h  zdspclient.cpp  zdspclient.h  zdspglobal.h  zeraglobal.h  zhserver.cpp  zhserver.h
zenux-service-common/: CMakeLists.txt  notzeronumgen.cpp  zenuxservicecommonConfig.cmake.in
(+1924 files in other folders)
